--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@
         <div id="answerPhase" class="phase hidden">
           <p class="prompt">Type what you heard:</p>
 
-          <div class="flex-row mv-10">
+          <div class="flex-row-no-res mv-10">
             <input
               type="text"
               id="answerInput"
